--- a/Semana-02/css/styles.css
+++ b/Semana-02/css/styles.css
@@ -1,29 +1,45 @@
-* {
+body {
   font-family: 'Roboto', sans-serif;
   font-size: 14px;
   color: #373867;
-}
-
-body {
-  margin: 0;
 }
 
 i {
   margin-right: 8px
 }
 
+header {
+  position: sticky;
+}
+
+aside {
+  background-color: #D9D9D9;
+  width: 291px;
+  height: 982px;
+  position: fixed;
+}
+
+main {
+  margin-left: 300px;
+  width: 1212px;
+}
+/* navbar and aside */ 
+
 .nav-bar {
   background-color: #D9D9D9;
-  height: 90px;
+  height: 106px;
+  width: 1512px;
   border-bottom: 3px solid #373867;
   font-weight: bold;
+  position: sticky;
 }
 
 .nav-bar ul {
   padding: 0;
   margin: 0;
   margin-left: 120px;
-  padding-top: 38px;
+  padding-top: 51px;
+  float: right;
 }
 
 .nav-bar li {
@@ -34,28 +50,22 @@ i {
   color: #373867;
   text-decoration: none;
   font-weight: bold;
-  padding-right: 30px;
+  padding-right: 45px;
 }
 
 .space-nav {
-  margin-left: 580px;
-}
-
-aside {
-  background-color: #D9D9D9;
-  width: 291px;
-  height: 982px;
+  margin-left: 624px;
 }
 
 .section-aside input {
-  width: 240px;
+  width: 260px;
   height: 37px;
   margin-top: 29px;
-  margin-left: 25px;
+  margin-left: 16px;
 }
 
-.section-aside p {
-  margin-top: 40px;
+.section-aside-p {
+  margin-top: 57px;
   margin-left: 53px;
   margin-right: 53px;
   border-bottom: 3px solid #373867;
@@ -71,20 +81,181 @@ aside {
   text-decoration: none;
 }
 
-.section-aside li, .section-info-aside div {
-  margin-top: 20px;
+.section-aside li {
+  margin-top: 29px;
   margin-left: 53px;
 }
 
-.margin-div-aside p {
-  margin-top: 80px;
-  margin-right: 53px;
+.section-aside-second-p {
+  margin-top: 207px;
   border-bottom: 3px solid #373867;
+  margin-right: 53px;
 }
 
-.margin-p-aside {
-  margin-right: 20px;
+/* main content 1 */
+
+
+.section-index div {
+  display: inline-block;
+  width: 50%;
 }
+
+.div-index {
+  margin-top: 109px;
+}
+
+.div-img-index {
+  float: right;
+}
+
+.div-index h1 {
+  margin-bottom: 168px;
+  margin-left: 106px;
+  font-size: 40px;
+  font-weight: bold;
+}
+
+.first-p-index {
+  font-size: 20px;
+  margin-left: 106px;
+  margin-bottom: 38px;
+  font-weight: 450;
+}
+
+.second-p-index {
+  background-color: #D9D9D9;
+  font-size: 15px;
+  padding: 20px 10px;
+  margin-left: 125px;
+  margin-right: 100px;
+  margin-bottom: 43px;
+  line-height: 24px;
+}
+
+.a-index {
+  margin-top: 43px;
+  margin-left: 173px;
+  text-decoration: none;
+  color: #373867;
+  padding: 14px 36px;
+  border: 1px solid #373867;
+  border-radius: 5px;
+
+}
+
+.img-index {
+  float: right;
+  width: 500px;
+  margin-right: 68px;
+  margin-top: 111px;
+}
+
+/* second section (about)*/ 
+
+.img-sections {
+  width: 130px;
+}
+
+.section-about-functions {
+  margin-bottom: 296px;
+  margin-top: 320px;
+}
+
+.margin-sections {
+  margin-left: 80px;
+}
+
+.section-about-functions article {
+  display: inline-block;
+  width: 40%;
+}
+
+h2 {
+  margin-bottom: 168px;
+  margin-left: 106px;
+  font-size: 40px;
+  font-weight: bold;
+}
+
+.articles {
+  margin-right: 100px;
+}
+
+.articles div {
+  display: inline-block;
+  width: 22%;
+}
+
+.articles h3 {
+  font-size: 20px;
+  margin-bottom: 17px;
+  margin-left: 55px;
+  width: 363px;
+}
+
+.articles p {
+  font-size: 15px;
+  line-height: 24px;
+  width: 363px;
+  margin-bottom: 66px;
+  margin-right: 72px;
+  margin-left: 55px;
+}
+
+.mrg {
+  margin-left: 70px;
+}
+
+
+/* information */ 
+
+.information {
+  height: 780px;
+  position: relative;
+}
+
+.information h2 {
+  margin-bottom: 17px;
+}
+
+.form {
+  padding: 20px;
+  position: absolute;
+  left: 40%;
+}
+
+.form div {
+  padding-bottom: 45px;
+}
+
+.form label {
+  display: block;
+  font-weight: 400;
+}
+
+.form input {
+  width: 260px;
+  height: 37px;
+  margin-top: 7px;
+  border-radius: 4px;
+  border: 1px solid #373867;
+}
+
+.form textarea {
+  width: 260px;
+  height: 97px;
+  border-radius: 4px;
+  margin-top: 7px;
+}
+
+.form button {
+  width: 76px;
+  height: 34px;
+  margin-left: 190px;
+}
+
+
+
 
 
 
