--- a/Semana-02/css/styles.css
+++ b/Semana-02/css/styles.css
@@ -2,6 +2,8 @@ body {
   font-family: 'Roboto', sans-serif;
   font-size: 14px;
   color: #373867;
+  line-height: 24px;
+  margin: 0;
 }
 
 i {
@@ -9,7 +11,14 @@ i {
 }
 
 header {
-  position: sticky;
+  position: fixed;
+  height: 70px;
+  padding: 0;
+  z-index: 1;
+}
+
+.header {
+  position: absolute;
 }
 
 aside {
@@ -17,13 +26,19 @@ aside {
   width: 291px;
   height: 982px;
   position: fixed;
+  z-index: 0;
+  margin-top: 110px;
+
 }
 
 main {
   margin-left: 300px;
-  width: 1212px;
+  position: absolute;
+  z-index: 0;
+  top: 13%;
 }
-/* navbar and aside */ 
+
+/* navbar */ 
 
 .nav-bar {
   background-color: #D9D9D9;
@@ -31,7 +46,6 @@ main {
   width: 1512px;
   border-bottom: 3px solid #373867;
   font-weight: bold;
-  position: sticky;
 }
 
 .nav-bar ul {
@@ -57,36 +71,38 @@ main {
   margin-left: 624px;
 }
 
-.section-aside input {
+/* aside */
+
+.aside input {
   width: 260px;
   height: 37px;
   margin-top: 29px;
   margin-left: 16px;
 }
 
-.section-aside-p {
+.aside ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.aside li {
+  margin-top: 29px;
+  margin-left: 53px;
+}
+
+.aside a {
+  text-decoration: none;
+}
+
+.menu-aside {
   margin-top: 57px;
   margin-left: 53px;
   margin-right: 53px;
   border-bottom: 3px solid #373867;
 }
 
-.section-aside ul {
-  list-style: none;
-  padding: 0;
-  margin: 0;
-}
-
-.section-aside a {
-  text-decoration: none;
-}
-
-.section-aside li {
-  margin-top: 29px;
-  margin-left: 53px;
-}
-
-.section-aside-second-p {
+.p-aside {
   margin-top: 207px;
   border-bottom: 3px solid #373867;
   margin-right: 53px;
@@ -95,137 +111,123 @@ main {
 /* main content 1 */
 
 
-.section-index div {
+.primary-section {
+  height: 900px;
+}
+
+.primary-section div {
   display: inline-block;
-  width: 50%;
+  width: 49%;
 }
 
-.div-index {
-  margin-top: 109px;
-}
+.primary-section div:first-of-type {
+  float: left;
+} 
 
-.div-img-index {
-  float: right;
-}
-
-.div-index h1 {
-  margin-bottom: 168px;
-  margin-left: 106px;
+.primary-section h1 {
   font-size: 40px;
   font-weight: bold;
+  margin-top: 109px;
+  margin-left: 106px;
+  margin-bottom: 168px;
 }
 
-.first-p-index {
+.text-primary-section {
   font-size: 20px;
+  font-weight: 450;
   margin-left: 106px;
   margin-bottom: 38px;
-  font-weight: 450;
 }
 
-.second-p-index {
-  background-color: #D9D9D9;
-  font-size: 15px;
-  padding: 20px 10px;
-  margin-left: 125px;
-  margin-right: 100px;
-  margin-bottom: 43px;
-  line-height: 24px;
-}
-
-.a-index {
-  margin-top: 43px;
-  margin-left: 173px;
-  text-decoration: none;
+.primary-section a {
   color: #373867;
+  text-decoration: none;
   padding: 14px 36px;
   border: 1px solid #373867;
   border-radius: 5px;
-
+  margin-left: 173px;
 }
 
-.img-index {
-  float: right;
+.primary-section img {
   width: 500px;
-  margin-right: 68px;
   margin-top: 111px;
+  margin-left: 52px;
 }
 
-/* second section (about)*/ 
+.p-primary-section {
+  background-color: #D9D9D9;
+  font-size: 15px;
+  line-height: 24px;
+  margin-bottom: 42px;
+  margin-left: 132px;
+  width: 410px;
+  text-align: start;
+}
+
+/* section about and functions */ 
 
 .img-sections {
   width: 130px;
 }
 
 .section-about-functions {
-  margin-bottom: 296px;
-  margin-top: 320px;
+  height: 900px;
+  width: 100%;
+  display: inline-block;
 }
 
-.margin-sections {
-  margin-left: 80px;
+.section-about-functions img {
+  float: left;
+  margin-right: 20px;
+}
+
+.section-about-functions h2 {
+  font-size: 40px;
+  margin-bottom: 168px;
+  margin-left: 106px;
+  font-weight: bold;
+}
+
+.section-about-functions h3 {
+  font-size: 20px;
+  margin-bottom: 10px;
+}
+
+.section-about-functions p {
+  font-size: 15px;
+  margin-top: 17px;
 }
 
 .section-about-functions article {
   display: inline-block;
-  width: 40%;
-}
-
-h2 {
-  margin-bottom: 168px;
-  margin-left: 106px;
-  font-size: 40px;
-  font-weight: bold;
-}
-
-.articles {
-  margin-right: 100px;
-}
-
-.articles div {
-  display: inline-block;
-  width: 22%;
-}
-
-.articles h3 {
-  font-size: 20px;
-  margin-bottom: 17px;
-  margin-left: 55px;
-  width: 363px;
-}
-
-.articles p {
-  font-size: 15px;
-  line-height: 24px;
-  width: 363px;
+  width: 49%;
   margin-bottom: 66px;
-  margin-right: 72px;
-  margin-left: 55px;
 }
 
-.mrg {
-  margin-left: 70px;
+.margin-sections {
+  margin-left: 50px;
 }
-
-
-/* information */ 
 
 .information {
-  height: 780px;
-  position: relative;
+  height: 900px;
 }
 
 .information h2 {
+  font-size: 40px;
+  margin-top: 104px;
   margin-bottom: 17px;
+  margin-left: 204px;
+  font-weight: 700;
+  font-size: 40px;
+  line-height: 47px;
 }
 
 .form {
-  padding: 20px;
-  position: absolute;
-  left: 40%;
+  margin-left: 407px;
 }
 
 .form div {
-  padding-bottom: 45px;
+  margin-bottom: 22px;
 }
 
 .form label {
@@ -252,10 +254,130 @@ h2 {
   width: 76px;
   height: 34px;
   margin-left: 190px;
+  border: 1px solid #373867;
+  border-radius: 5px;
 }
 
 
 
+/* history */
+
+
+#history {
+  height: 900px;
+  padding: 20px;
+}
+
+#history div {
+  display: inline-block;
+  width: 49%;
+}
+
+#history h2 {
+  font-size: 40px;
+  margin-bottom: 17px;
+  margin-left: 100px;
+}
+
+#history h3 {
+  font-size: 30px;
+  margin-bottom: 119px;
+  margin-left: 100px;
+}
+
+#history div:first-of-type {
+  float: left;
+}
+
+.first-div-history p {
+  width: 383px;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 24px;
+  margin-left: 100px;
+}
+
+.second-div-history p {
+  margin-bottom: 20px;
+  width: 440px;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 18px;
+}
+
+/* products business support*/
+
+.products-services {
+  height: 900px;
+}
+
+.products-services h2{
+  font-weight: 700;
+  font-size: 40px;
+  line-height: 47px;
+  color: #373867;
+  margin-left: 397px;
+  margin-bottom: 81px ;
+}
+
+.products-services p {
+  font-weight: 400;
+  font-size: 15px;
+  line-height: 24px;
+  width: 410px;
+  margin-left: 397px;
+}
+
+.products-business-support {
+  height: 900px;
+}
+
+.products-business-support h2 {
+  width: 245px;
+  height: 60px;
+  background-color: #D9D9D9;
+  font-weight: 700;
+  font-size: 40px;
+  line-height: 47px;
+  text-align: center;
+  padding-top: 10px;
+  margin-left: 132px;
+}
+
+.products-business-support p {
+  width: 237px;
+  font-weight: 400;
+  font-size: 16px;  
+  line-height: 18px;
+  margin-top: 36px;
+  margin-left: 140px;
+}
+
+.products-business-support div {
+  display: inline-block;
+}
+
+.div-ol {
+  width: 272px;
+  height: 355px;
+  background-color: #D9D9D9;
+  margin-left: 164px;
+  padding-top: 10px;
+}
+
+.div-ol li {
+  text-align: center;
+  margin-bottom: 56px;
+}
+
+.div-ol a {
+  text-decoration: none;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 23px;
+  color: #383767;
+}
 
 
 
