--- a/Semana-03/css/header.css
+++ b/Semana-03/css/header.css
@@ -1,18 +1,68 @@
-header {
+.header {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  position: fixed;
+  width: 100%;
   height: 10%;
-  margin: 0;
+  top: 0;
   padding: 0 30px;
   background-color: #D9D9D9;
   font-size: 20px;
   font-weight: bold;
+  border-bottom: 3px solid #373867;
 }
 
-header ul {
+.header div {
+  display: flex;
+  justify-content: space-between;
+  flex-basis: 100%;
+}
+
+nav {
   display: none;
 } 
+
+nav li {
+  display: inline-block;
+}
+
+nav a {
+  padding-left: 29px;
+}
+
+@media (min-width: 768px) {
+  nav {
+    display: inline;
+  }
+
+  .title-index {
+    display: none;
+  }
+
+  .header div {
+    flex-basis: 0;
+  }
+
+  .header {
+    border-bottom: 0;
+  }
+}
+
+@media (min-width: 1024px) {
+
+  .header {
+    border-bottom: 3px solid #373867;
+  }
+  
+  .title-index {
+    display: inline;
+  }
+
+  .header div {
+    flex-basis: 15%;
+  }
+}
 
 
 
