--- a/Semana-03/css/sidebar.css
+++ b/Semana-03/css/sidebar.css
@@ -3,14 +3,13 @@
   position: fixed;
   flex-direction: column;
   width: 300px;
-  top: 90px;
   height: 100%;
+  top: 10%;
   padding: 19px;
   background-color: #D9D9D9;
   font-weight: 500;
   font-size: 14px;
   line-height: 20px;
-  z-index: -1;
 }
 
 .aside-links input {
