--- a/Semana-03/css/header.css
+++ b/Semana-03/css/header.css
@@ -28,7 +28,14 @@ nav li {
 }
 
 nav a {
-  padding-left: 27px;
+  margin-left: 24px;
+}
+
+nav a:hover {
+  padding: 10px;
+  border-radius: 8px;
+  background-color: #373867;
+  color: white;
 }
 
 @media (min-width: 768px) {
@@ -49,7 +56,7 @@ nav a {
   }
 }
 
-@media (min-width: 1024px) {
+@media screen and (min-width: 1024px) {
 
   .header {
     border-bottom: 3px solid #373867;
