--- a/Semana-03/css/main.css
+++ b/Semana-03/css/main.css
@@ -2,38 +2,20 @@ main {
   margin-top: 90px;
 }
 
+h1 {
+  font-weight: 700;
+  font-size: 20px;
+  margin-bottom: 30px;
+}
+
 h2 {
   margin-left: 6%;
 }
 
-/* NO ANDA */
-/*
-#primary-section {
-  width: 90%;
-  margin: auto;
-  display: flex;
-  justify-content: space-around;
-  flex-wrap: wrap-reverse;
-  align-items: center;
+p {
+  font-size: 16px;
+  font-weight: 400px;
 }
-
-#primary-section div {
-  display: flex;
-  flex-direction: column;
-  flex-basis: 600px;
-  justify-content: center;
-  margin-top: 54px;
-  margin-bottom: 100px;
-}
-
-#primary-section img {
-  margin-top: 30px;
-  width: 300px;
-  max-width: 600px;
-  flex-grow: 0.5;
-} 
-*/
-
 
 #primary-section {
   width: 90%;
@@ -47,8 +29,9 @@ h2 {
 #primary-section div {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-evenly;
   width: 100%;
+  height: 500px;  
   margin-top: 54px;
 }
 
@@ -59,22 +42,13 @@ h2 {
   flex-grow: 0.5;
 }
 
-#primary-section h1 {
-  font-weight: 700;
-  font-size: 20px;
-  margin-bottom: 30px;
-}
-
 #primary-section p:nth-of-type(1) {
-  font-weight: 400;
   font-size: 20px;
   line-height: 23px;
   margin-bottom: 20px;
 }
 
 #primary-section p:nth-of-type(2) {
-  font-weight: 400;
-  font-size: 15px;
   line-height: 24px;
   margin-bottom: 20px;
 }
@@ -85,27 +59,18 @@ h2 {
   align-self: flex-start;
 }
  
-
-/* about and functions*/
-
-
 .about h2 {
-  margin-left: 6%;
   margin-top: 15%;
 } 
 
-.functions h2 {
-  margin-left: 6%;
-}
-
-.container {
+.box-about, .box-functions {
   display: flex;
   justify-content: center;
   padding: 5px;
   flex-wrap: wrap;
 }
 
-.container article {
+.box-about article, .box-functions article {
   display: flex;
   margin: 20px;
   width: 90%;
@@ -121,17 +86,12 @@ h2 {
 
 .about h2, .functions h2 {
   margin-bottom: 39px;
-  width: 300px;
 }
 
 .about h3, .functions h3 {
-  font-size: 20px;
   margin-bottom: 10px;
+  font-size: 20px;
 }
-
-
-/*information*/
-
 
 .information h2 {
   margin-bottom: 40px;
@@ -187,6 +147,11 @@ input {
   margin-bottom: 20px;
 }
 
+.contact-area input[type="radio"] {
+  margin-top: 10px;
+  accent-color: #373867;
+}
+
 .box-message {
   display: flex;
   flex-direction: column;
@@ -200,14 +165,10 @@ input {
 .information button {
   margin-left: 260px;
   margin-top: 20px;
+  padding: 10px 24px;
   border: 1px solid #373867;
   border-radius: 5px;
-  padding: 10px 24px;
 }
-
-
-/*history*/
-
 
 .history {
   display: flex;
@@ -216,53 +177,39 @@ input {
 }
 
 .history h3 {
-  margin-left: 6%;
-  margin-right: 6%;
+  margin-top: 20px;
   font-weight: 500;
-  font-size: 16px;
   line-height: 19px;
 }
 
 .history article:nth-of-type(1) p:nth-of-type(1) {
+  font-weight: 400;
+  line-height: 24px;
+}
+
+.history h3, .history article:nth-of-type(1) p:nth-of-type(1), 
+.history p, .products-services p, .products div:nth-of-type(1), 
+.business div:nth-of-type(1), .support div:nth-of-type(1) {
   margin-left: 6%;
   margin-right: 6%;
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 24px;
 }
 
 .history p {
-  margin-left: 6%;
-  margin-right: 6%;
   padding: 27px 0 20px 0;
-  font-size: 12px;
   line-height: 18px;
 }
 
-
-/* products and services */
-
-
 .products-services h2 {
   margin-bottom: 49px;
-  margin-bottom: 49px;
   line-height: 24px;
-  width: 295px;
 }
 
 .products-services p {
-  margin-left: 25px;
-  margin-right: 25px;
   font-size: 15px;
   line-height: 24px;
-
 }
 
-
-/* products, business, support*/
-
-
-.container-box {
+.box-services {
   display: flex;
   flex-direction: column;
 }
@@ -270,6 +217,7 @@ input {
 .products, .business, .support {
   display: flex;
   flex-direction: column;
+  padding: 0;
 }
 
 .products h2, .business h2, .support h2 {
@@ -277,13 +225,14 @@ input {
   margin-bottom: 46px;
 }
 
-.products, .business, .support p {
+.products p, .business p, .support p {
   line-height: 18px;
 }
 
-.products div:nth-of-type(2), .business div:nth-of-type(2), .support div:nth-of-type(2) {
-  margin-top: 60px;
-  margin-left: 88px;
+.products div:nth-of-type(2), 
+.business div:nth-of-type(2), 
+.support div:nth-of-type(2) {
+  margin: 60px 0 0 100px;
   font-size: 20px;
   line-height: 23px;
 }
@@ -295,34 +244,40 @@ input {
 }
 
 
-/* media */
-
-
-@media (min-width: 768px) {
+@media screen and (min-width: 768px) {
   .about img, .functions img {
     display: unset;
   }
 }
 
-@media (min-width: 1024px) {
+@media screen and (min-width: 1024px) {
+  
   main {
     margin: 130px 0 0 300px;
   }
 
-  #primary-section h1 {
+  label, p, .history p, .products-services p {
+    font-size: 17px;
+  }
+
+  #primary-section h1, h2 {
     font-size: 40px;
   }
 
-  #primary-section {
+  h3, .history article:nth-of-type(1) p:nth-of-type(1) {
+    font-size: 24px;
+  }
+
+  #primary-section, .box-services {
    flex-direction: row;
   }
 
-  #primary-section div {
+  #primary-section div, #primary-section img {
     width: 47%;
    }
 
   #primary-section img {
-    width: 47%;
+    margin-left: 30px;
   }
 
   #primary-section p:nth-of-type(2) {
@@ -330,8 +285,16 @@ input {
     padding: 20px 10px;
   }
 
-  .container article, .container article {
+  #primary-section a {
+    margin-left: 60px;
+  }
+
+  .box-about article, .box-functions article {
     width: 43%;
+  }
+
+  .history article {
+    width: 50%;
   }
 
   .about img, .functions img {
@@ -339,27 +302,6 @@ input {
     width: 100px;
     height: 100px;
     margin-right: 60px;
-  }
-
-  .history article {
-    width: 50%;
-    font-size: 16px;
-  }
-
-  .history h3 {
-    font-size: 24px;
-  }
-
-  .history p {
-    font-size: 16px;
-  }
-
-  .history article:nth-of-type(1) p:nth-of-type(1) {
-    font-size: 20px;
-  }
-
-  .container-box {
-    flex-direction: row;
   }
 
   .products p:nth-of-type(1), .business p:nth-of-type(1), .support p:nth-of-type(1) {
