--- a/Semana-03/css/sidebar.css
+++ b/Semana-03/css/sidebar.css
@@ -8,7 +8,7 @@
   padding: 19px;
   background-color: #D9D9D9;
   font-weight: 500;
-  font-size: 14px;
+  font-size: 18px;
   line-height: 20px;
 }
 
@@ -33,7 +33,7 @@
   border-bottom: 3px solid #373867;
 }
 
-@media (min-width: 1024px) {
+@media screen and (min-width: 1024px) {
   .aside {
     display: flex;
   }
