--- a/Semana-03/css/sidebar.css
+++ b/Semana-03/css/sidebar.css
@@ -8,7 +8,7 @@
   padding: 19px;
   background-color: #D9D9D9;
   font-weight: 500;
-  font-size: 18px;
+  font-size: 17px;
   line-height: 20px;
 }
 
@@ -28,8 +28,13 @@
   border-bottom: 3px solid #373867;
 }
 
+.aside-links p {
+  margin: 57px 33px 0 33px ;
+  border-bottom: 3px solid #373867;
+}
+
 .aside-contact li:nth-of-type(1) {
-  margin: 207px 33px 0 33px ;
+  margin: 150px 33px 0 33px ;
   border-bottom: 3px solid #373867;
 }
 
