--- a/Semana-03/css/header.css
+++ b/Semana-03/css/header.css
@@ -1,16 +1,16 @@
 .header {
+  position: fixed;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  position: fixed;
   width: 100%;
   height: 10%;
   top: 0;
   padding: 0 30px;
+  border-bottom: 3px solid #373867;
   background-color: #D9D9D9;
   font-size: 20px;
   font-weight: bold;
-  border-bottom: 3px solid #373867;
 }
 
 .header div {
@@ -23,8 +23,8 @@ nav {
   display: none;
 } 
 
-nav li {
-  display: inline-block;
+nav ul {
+  display: flex;
 }
 
 nav a {
