BaSP-W06-2022: sign up page with styles created

--- a/Semana-06/views/sign-up.html
+++ b/Semana-06/views/sign-up.html
@@ -76,12 +76,73 @@
     </div>
 	</aside>
 	<main>
-		
-
-
-
-
-
+    <div class="container">
+      <div class="box-1">
+        <h2>Trackgenix</h2>
+        <h3>GigaTech Software Solutions SA</h3>
+        <p>
+          Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
+          Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
+          when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+        </p>
+      </div>
+      <div class="box-2">
+        <form>
+          <div class="box-3">
+            <div>
+              <h4>Sign Up</h4>
+            </div>
+            <div>
+              <label>Name</label>
+              <input type="text">
+            </div>
+            <div>
+              <label>Last Name</label>
+              <input type="text">
+            </div>
+            <div>
+              <label>DNI</label>
+              <input type="text">
+            </div>
+            <div>
+              <label>Date of Birth</label>
+              <input type="date">
+            </div>
+            <div>
+              <label>Phone</label>
+              <input type="text">
+            </div>
+            <div>
+              <label>Address</label>
+              <input type="text">
+            </div>
+            <div>
+              <label>Location</label>
+              <input type="text">
+            </div>
+            <div>
+              <label>Postal Code</label>
+              <input type="text">
+            </div>
+            <div>
+              <label>Email</label>
+              <input type="text">
+            </div>
+            <div>
+              <label>Password</label>
+              <input type="password">
+            </div>
+            <div>
+              <label>Repeat Password</label>
+              <input type="password">
+            </div>
+            <div class="box-4">
+              <button>Sign Up</button>
+            </div>
+          </div>
+        </form>
+      </div>
+    </div>	
 	</main> 
 	<footer class="footer">
     <ul>
