BaSP-W06-2022: corrections made to styles and logic applied to the login

--- a/Semana-06/views/login.html
+++ b/Semana-06/views/login.html
@@ -91,11 +91,13 @@
           <h4>Login</h4>
           <div>
             <label>Email or User</label>
-            <input type="text" placeholder="user@gigatech.com">
+            <input type="text" placeholder="user@gigatech.com" id="email">
+            <span id="email-message">Email required</span>
           </div>
           <div>
             <label>Password</label>
-            <input type="password" placeholder="********">
+            <input type="password" placeholder="********" id="password">
+            <span id="password-message">Password required</span>
           </div>
           <div>
             <label>Remember me</label>
@@ -103,9 +105,9 @@
           </div>
           <div class="box-3">
             <a href="#">Forgot password or Email?</a>
-            <button>Login</button>
+            <button id="login">Login</button>
             <a href="#">Don't have an account yet?</a>
-            <button>Register</button>
+            <button>Sign Up</button>
           </div>
           <div></div>
         </form>
