--- a/Semana-06/styles/login.css
+++ b/Semana-06/styles/login.css
@@ -1,7 +1,8 @@
 main {
   display: flex;
   justify-content: center;
-  height: 100%;
+  padding-top: 50px;
+  padding-bottom: 50px;
   background-color: #373867;
 }
 
@@ -15,11 +16,12 @@ h2 {
 }
 
 h3 {
-  font-size: 20px;
+  font-size: 17px;
 }
 
 h4 {
-  font-size: 30px;
+  margin: 8% 0 8% 0;
+  font-size: 17px;
   font-weight: 700;
 }
 
@@ -30,6 +32,7 @@ form {
   align-items: center;
   height: 100%;
   width: 80%;
+  padding-bottom: 30px;
   border-radius: 10px;
   background-color: white;
 }
@@ -41,7 +44,7 @@ form div {
 }
 
 form input, form label, form a, button {
-  font-size: 20px;
+  font-size: 17px;
   font-weight: 500;
 }
 
@@ -60,17 +63,17 @@ form label {
   flex-direction: column;
   align-items: center;
   width: 100%;
+  padding-top: 30px;
 }
 
 .box-1 {
-  display: flex;
+  display: none;
   flex-direction: column;
   justify-content: space-evenly;
   align-items: flex-start;
   height: 300px;
   width: 40%;
   margin-left: 10%;
-  visibility: hidden;
 }
 
 .box-1 p {
@@ -83,9 +86,9 @@ form label {
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  width: 90%;
-  height: 70%;
-  margin: 10px;
+  width: 80%;
+  margin: 20px;
+  margin-top: 10%;
 }
 
 .box-2 div:nth-of-type(3) {
@@ -106,20 +109,24 @@ form label {
 
 .box-3 {
   display: flex;
+  width: 90%;
   height: 35%;
+  margin: 20px;
   justify-content: space-around;
   align-items: center;
 }
 
 .box-3 button {
   width: 50%;
-  height: 20%;
+  height: 50px;
+  margin: 20px;
   border-radius: 5px;
 }
 
 .box-3 button:nth-of-type(1) {
-  color: white;
   background-color: #373867;
+  color: white;
+  border: none;
 }
 
 .box-3 button:nth-of-type(2) {
@@ -127,10 +134,45 @@ form label {
   border-color: #373867;
 }
 
+.border-none {
+  border: none;
+}
+
+.border {
+  border: 1px solid black;
+}
+
+.correct {
+  border: 1px solid green;
+}
+
+.error {
+  border: 1px solid red;
+}
+
+::placeholder {
+  color: #373867;
+  font-style: italic;
+}
+#email-message, #password-message {
+  visibility: hidden;
+  margin-top: 10px;
+  margin-bottom: 5px;
+  color: red;
+  font-size: 12px;
+}
+
+@media screen and (min-width: 768px) {
+  form {
+    width: 70%;
+  }
+}
+
 @media screen and (min-width: 1024px) {
 
   main {
     margin-left: 300px;
+    padding-top: 80px;
   }
 
   .container {
@@ -138,11 +180,12 @@ form label {
   }
 
   .box-1 {
-    visibility: visible;
+    display: flex;
   }
 
   .box-2 {
     width: 60%;
+    margin-top: 0;
   }
 
 }
