--- a/Semana-06/views/sign-up.html
+++ b/Semana-06/views/sign-up.html
@@ -94,47 +94,58 @@
             </div>
             <div>
               <label>Name</label>
-              <input type="text">
+              <input type="text" id="name">
+              <span id="name-span">Name required</span>
             </div>
             <div>
               <label>Last Name</label>
-              <input type="text">
+              <input type="text" id="last-name">
+              <span id="last-name-span">Last Name required</span>
             </div>
             <div>
               <label>DNI</label>
-              <input type="text">
+              <input type="text" id="dni">
+              <span id="dni-span">DNI required</span>
             </div>
             <div>
               <label>Date of Birth</label>
-              <input type="date">
+              <input type="date" id="date">
+              <span id="date-span">Date of Birth required</span>
             </div>
             <div>
               <label>Phone</label>
-              <input type="text">
+              <input type="text" id="phone">
+              <span id="phone-span">Phone required</span>
             </div>
             <div>
               <label>Address</label>
-              <input type="text">
+              <input type="text" id="address">
+              <span id="address-span">Address required</span>
             </div>
             <div>
               <label>Location</label>
-              <input type="text">
+              <input type="text" id="location">
+              <span id="location-span">Location required</span>
             </div>
             <div>
               <label>Postal Code</label>
-              <input type="text">
+              <input type="text" id="postal-code">
+              <span id="postal-span">Postal Code required</span>
             </div>
             <div>
               <label>Email</label>
-              <input type="text">
+              <input type="text" id="email">
+              <span id="email-span">Email required</span>
             </div>
             <div>
               <label>Password</label>
-              <input type="password">
+              <input type="password" id="password">
+              <span id="password-span">Password required</span>
             </div>
             <div>
               <label>Repeat Password</label>
-              <input type="password">
+              <input type="password" id="repeat-password">
+              <span id="repeat-password-span">Repeat Password required</span>
             </div>
             <div class="box-4">
               <button>Sign Up</button>
