--- a/Semana-06/views/login.html
+++ b/Semana-06/views/login.html
@@ -91,12 +91,12 @@
           <h4>Login</h4>
           <div>
             <label>Email or User</label>
-            <input type="text" placeholder="user@gigatech.com" id="email">
+            <input type="text" placeholder="user@gigatech.com" id="email" required>
             <span id="email-message">Email required</span>
           </div>
           <div>
             <label>Password</label>
-            <input type="password" placeholder="********" id="password">
+            <input type="password" placeholder="********" id="password" required >
             <span id="password-message">Password required</span>
           </div>
           <div>
