BaSP-W06-2022: alerts added to sign up button

--- a/Semana-06/views/login.html
+++ b/Semana-06/views/login.html
@@ -107,7 +107,7 @@
             <a href="#">Forgot password or Email?</a>
             <button id="login">Login</button>
             <a href="#">Don't have an account yet?</a>
-            <button>Sign Up</button>
+            <a href="sign-up.html" class="sign-up">Sign Up</a>
           </div>
           <div></div>
         </form>
