--- a/Semana-06/styles/login.css
+++ b/Semana-06/styles/login.css
@@ -22,7 +22,7 @@ h3 {
 h4 {
   margin: 8% 0 8% 0;
   font-size: 17px;
-  font-weight: 700;
+  font-weight: 600;
 }
 
 form {
@@ -45,11 +45,11 @@ form div {
 
 form input, form label, form a, button {
   font-size: 17px;
-  font-weight: 500;
+  font-weight: 400;
 }
 
 form input {
-  height: 60px;
+  height: 40px;
   border: 1px solid #373867;
   border-radius: 5px;
 }
@@ -97,11 +97,12 @@ form label {
   flex-direction: row-reverse;
   justify-content: center;
   align-items: center;
+  margin-bottom: 10px;
 }
 
 .box-2 div:nth-of-type(3) input {
   width: 6%;
-  margin-right: 30px;
+  margin-right: 17px;
 }
 
 .box-2 div:nth-of-type(3) label {
@@ -112,14 +113,13 @@ form label {
   display: flex;
   width: 90%;
   height: 35%;
-  margin: 20px;
   justify-content: space-around;
   align-items: center;
 }
 
 .box-3 button {
   width: 50%;
-  height: 50px;
+  height: 40px;
   margin: 20px;
   border-radius: 5px;
 }
@@ -130,9 +130,14 @@ form label {
   border: none;
 }
 
-.box-3 button:nth-of-type(2) {
-  color: #373867;
+.sign-up {
+  width: 50%;
+  height: 40px;
+  margin: 20px;
+  padding: 12px;
   border: 1px solid #373867;
+  border-radius: 5px;
+  text-align: center;
 }
 
 .border-none {
