--- a/Semana-06/styles/sign-up.css
+++ b/Semana-06/styles/sign-up.css
@@ -18,7 +18,7 @@ h3 {
 }
 
 h4 {
-  margin-top: 50px;
+  margin-top: 30px;
   margin-bottom: 20px;
   font-size: 17px;
   font-weight: 700;
@@ -101,23 +101,23 @@ form label {
   width: 100%;
 }
 
-.box-3 div:nth-of-type(2), .box-3 div:nth-of-type(13) {
+.box-3 div:nth-of-type(1), .box-3 div:nth-of-type(2), .box-3 div:nth-of-type(13) {
   width: 100%;
+}
+
+.box-3 div:nth-of-type(1) {
+  text-align: center;
 }
 
 .box-4 button{
   align-self: center;
-  height: 35px;
+  height: 40px;
   width: 50%; 
   margin-bottom: 20px;
   border: none;
   border-radius: 5px;
   color: white;
   background-color: #373867;
-}
-
-.border-none {
-  border: none;
 }
 
 .border {
@@ -137,7 +137,7 @@ form label {
   font-style: italic;
 }
 
-#name-span, #last-name-span, #dni-span, #phone-span, #date-span, #address-span, 
+#name-span, #last-name-span, #dni-span, #phone-span, #date-span, #dir-span, 
 #location-span, #postal-span, #email-span, #password-span, #repeat-password-span {
   visibility: hidden;
   margin-top: 10px;
