--- a/Semana-06/views/sign-up.html
+++ b/Semana-06/views/sign-up.html
@@ -87,7 +87,7 @@
         </p>
       </div>
       <div class="box-2">
-        <form>
+        <form id="form">
           <div class="box-3">
             <div>
               <h4>Sign Up</h4>
@@ -95,60 +95,60 @@
             <div>
               <label>Name</label>
               <input type="text" id="name">
-              <span id="name-span">Name required</span>
+              <span id="name-span" required>Name required</span>
             </div>
             <div>
               <label>Last Name</label>
               <input type="text" id="last-name">
-              <span id="last-name-span">Last Name required</span>
+              <span id="last-name-span" required>Last Name required</span>
             </div>
             <div>
               <label>DNI</label>
               <input type="text" id="dni">
-              <span id="dni-span">DNI required</span>
+              <span id="dni-span" required>DNI required</span>
             </div>
             <div>
               <label>Date of Birth</label>
               <input type="date" id="date">
-              <span id="date-span">Date of Birth required</span>
+              <span id="date-span" required>Date of Birth required</span>
             </div>
             <div>
               <label>Phone</label>
               <input type="text" id="phone">
-              <span id="phone-span">Phone required</span>
+              <span id="phone-span" required>Phone required</span>
             </div>
             <div>
               <label>Address</label>
               <input type="text" id="address">
-              <span id="address-span">Address required</span>
+              <span id="dir-span" required>Address required</span>
             </div>
             <div>
               <label>Location</label>
               <input type="text" id="location">
-              <span id="location-span">Location required</span>
+              <span id="location-span" required>Location required</span>
             </div>
             <div>
               <label>Postal Code</label>
               <input type="text" id="postal-code">
-              <span id="postal-span">Postal Code required</span>
+              <span id="postal-span" required>Postal Code required</span>
             </div>
             <div>
               <label>Email</label>
               <input type="text" id="email">
-              <span id="email-span">Email required</span>
+              <span id="email-span" required>Email required</span>
             </div>
             <div>
               <label>Password</label>
               <input type="password" id="password">
-              <span id="password-span">Password required</span>
+              <span id="password-span" required>Password required</span>
             </div>
             <div>
               <label>Repeat Password</label>
               <input type="password" id="repeat-password">
-              <span id="repeat-password-span">Repeat Password required</span>
+              <span id="repeat-password-span" required>Passwords don't match</span>
             </div>
             <div class="box-4">
-              <button>Sign Up</button>
+              <button id="sign-up">Create</button>
             </div>
           </div>
         </form>
