--- a/Semana-06/styles/sign-up.css
+++ b/Semana-06/styles/sign-up.css
@@ -137,7 +137,7 @@ form label {
   font-style: italic;
 }
 
-#name-span, #last-name-span, #dni-span, #phone-span, #date-span, #dir-span, 
+#name-span, #last-name-span, #dni-span, #phone-span, #date-span, #address-span, 
 #location-span, #postal-span, #email-span, #password-span, #repeat-password-span {
   visibility: hidden;
   margin-top: 10px;
