--- a/Semana-06/views/sign-up.html
+++ b/Semana-06/views/sign-up.html
@@ -120,7 +120,7 @@
             <div>
               <label>Address</label>
               <input type="text" id="address">
-              <span id="dir-span" required>Address required</span>
+              <span id="address-span" required>Address required</span>
             </div>
             <div>
               <label>Location</label>
