--- a/Semana-07/styles/login.css
+++ b/Semana-07/styles/login.css
@@ -44,7 +44,7 @@ form div {
 }
 
 form input, form label, form a, button {
-  font-size: 17px;
+  font-size: 15px;
   font-weight: 400;
 }
 
@@ -102,6 +102,7 @@ form label {
 
 .box-2 div:nth-of-type(3) input {
   width: 6%;
+  min-width: 15px;
   margin-right: 17px;
 }
 
