--- a/Semana-07/views/login.html
+++ b/Semana-07/views/login.html
@@ -91,17 +91,17 @@
           <h4>Login</h4>
           <div>
             <label>Email or User</label>
-            <input type="text" placeholder="user@gigatech.com" id="email" required>
-            <span id="email-message">Email required</span>
+            <input type="text" placeholder="user@gigatech.com" id="email">
+            <span id="email-message">Email Required</span>
           </div>
           <div>
             <label>Password</label>
-            <input type="password" placeholder="********" id="password" required >
-            <span id="password-message">Password required</span>
+            <input type="password" placeholder="********" id="password">
+            <span id="password-message">Password Required</span>
           </div>
           <div>
-            <label>Remember me</label>
-            <input type="checkbox" name="" id="">
+            <label for="checkbox" >Remember me</label>
+            <input type="checkbox" id="checkbox">
           </div>
           <div class="box-3">
             <a href="#">Forgot password or Email?</a>
