--- a/Semana-07/views/sign-up.html
+++ b/Semana-07/views/sign-up.html
@@ -95,57 +95,57 @@
             <div>
               <label>Name</label>
               <input type="text" id="name">
-              <span id="name-span" required>Name required</span>
+              <span id="name-span"></span>
             </div>
             <div>
               <label>Last Name</label>
               <input type="text" id="last-name">
-              <span id="last-name-span" required>Last Name required</span>
+              <span id="last-name-span"></span>
             </div>
             <div>
               <label>DNI</label>
               <input type="text" id="dni">
-              <span id="dni-span" required>DNI required</span>
+              <span id="dni-span"></span>
             </div>
             <div>
               <label>Date of Birth</label>
               <input type="date" id="date">
-              <span id="date-span" required>Date of Birth required</span>
+              <span id="date-span"></span>
             </div>
             <div>
               <label>Phone</label>
               <input type="text" id="phone">
-              <span id="phone-span" required>Phone required</span>
+              <span id="phone-span"></span>
             </div>
             <div>
               <label>Address</label>
               <input type="text" id="address">
-              <span id="address-span" required>Address required</span>
+              <span id="address-span"></span>
             </div>
             <div>
               <label>Location</label>
               <input type="text" id="location">
-              <span id="location-span" required>Location required</span>
+              <span id="location-span"></span>
             </div>
             <div>
               <label>Postal Code</label>
               <input type="text" id="postal-code">
-              <span id="postal-span" required>Postal Code required</span>
+              <span id="postal-span"></span>
             </div>
             <div>
               <label>Email</label>
               <input type="text" id="email">
-              <span id="email-span" required>Email required</span>
+              <span id="email-span"></span>
             </div>
             <div>
               <label>Password</label>
               <input type="password" id="password">
-              <span id="password-span" required>Password required</span>
+              <span id="password-span"></span>
             </div>
             <div>
               <label>Repeat Password</label>
               <input type="password" id="repeat-password">
-              <span id="repeat-password-span" required>Passwords don't match</span>
+              <span id="repeat-password-span"></span>
             </div>
             <div class="box-4">
               <button id="sign-up">Create</button>
