BaSP-W07-2022: final touches made and readme updated

--- a/Semana-07/styles/sign-up.css
+++ b/Semana-07/styles/sign-up.css
@@ -132,6 +132,11 @@ form label {
   border: 1px solid red;
 }
 
+.disable-btn {
+  opacity: 0.5;
+  cursor: not-allowed;
+}
+
 ::placeholder {
   color: #373867;
   font-style: italic;
