--- a/Semana-07/styles/login.css
+++ b/Semana-07/styles/login.css
@@ -158,6 +158,11 @@ form label {
   border: 1px solid red;
 }
 
+.disable-btn {
+  opacity: 0.5;
+  cursor: not-allowed;
+}
+
 ::placeholder {
   color: #373867;
   font-style: italic;
